<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WeightFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/app_green_100"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_8adp"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7adp"
            android:src="@drawable/ic_back_arrow"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:letterSpacing=".05"
            android:paddingHorizontal="@dimen/_4asp"
            android:paddingVertical="@dimen/_4adp"
            android:text="@string/bmi_str"
            android:textColor="@color/white"
            android:textSize="@dimen/_18asp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".13" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20adp"
        android:paddingTop="@dimen/_12adp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age_textField1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_4adp"
            android:hint="@string/select_age_str"
            android:textColorHint="@color/gray_700"
            app:boxStrokeColor="@color/gray_700"
            app:boxStrokeWidth="@dimen/_1adp"
            app:boxStrokeWidthFocused="0.5dp"
            app:hintTextColor="@color/gray_700"
            app:placeholderTextColor="@color/gray_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/gray_700"
                android:textSize="@dimen/_12asp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age_textField2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_4adp"
            android:hint="@string/gender_str"
            android:textColorHint="@color/gray_700"
            app:boxStrokeColor="@color/gray_700"
            app:boxStrokeWidth="@dimen/_1adp"
            app:boxStrokeWidthFocused="0.5dp"
            app:hintTextColor="@color/gray_700"
            app:placeholderTextColor="@color/gray_700">

            <Spinner
                android:id="@+id/gender_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_12adp"
                android:entries="@array/gender_options"
                android:spinnerMode="dropdown" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age_textField3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_4adp"
            android:hint="@string/weight_str"
            android:textColorHint="@color/gray_700"
            app:boxStrokeColor="@color/gray_700"
            app:boxStrokeWidth="@dimen/_1adp"
            app:boxStrokeWidthFocused="0.5dp"
            app:hintTextColor="@color/gray_700"
            app:placeholderTextColor="@color/gray_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weight_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:textColor="@color/gray_700"
                android:textSize="@dimen/_12asp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age_textField4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_4adp"
            android:hint="@string/height_str"
            android:textColorHint="@color/gray_700"
            app:boxStrokeColor="@color/gray_700"
            app:boxStrokeWidth="@dimen/_1adp"
            app:boxStrokeWidthFocused="0.5dp"
            app:hintTextColor="@color/gray_700"
            app:placeholderTextColor="@color/gray_700">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/height_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:textColor="@color/gray_700"
                android:textSize="@dimen/_12asp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:letterSpacing=".05"
            android:minHeight="@dimen/_100adp"
            android:paddingHorizontal="@dimen/_4asp"
            android:paddingVertical="@dimen/_4adp"
            android:text="@string/bmi_str"
            android:textColor="@color/gray_700"
            android:textSize="@dimen/_18asp"
            android:textStyle="bold"
            android:visibility="visible" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/go_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_6adp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/app_green_100"
                android:paddingVertical="@dimen/_8adp"
                android:text="@string/sign_up_str"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12asp"
                android:textStyle="bold"
                app:backgroundTint="@color/app_green_100" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/calculate_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_6adp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/app_green_100"
                android:paddingVertical="@dimen/_8adp"
                android:text="@string/calu_str"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12asp"
                android:textStyle="bold"
                app:backgroundTint="@color/app_green_100" />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>