<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_white_100"
    tools:context=".ui.LoginFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_16adp"
            android:paddingTop="@dimen/_18adp"
            android:paddingBottom="@dimen/_2adp"
            android:text="@string/log_in_title"
            android:textColor="@color/text_100"
            android:textSize="@dimen/_22asp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_16adp"
            android:paddingBottom="@dimen/_8adp"
            android:text="@string/log_in_title_sub"
            android:textColor="@color/text_200"
            android:textSize="@dimen/_12asp"
            android:textStyle="bold"

            />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_info_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12adp"
        app:cardCornerRadius="@dimen/_12adp"
        app:cardBackgroundColor="@color/app_green_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            app:boxStrokeWidth="@dimen/_1adp"
            android:paddingHorizontal="@dimen/_12adp"
            android:paddingVertical="@dimen/_16adp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_14adp"
                android:text="@string/log_in_str"
                android:textColor="@color/white"
                android:textFontWeight="950"
                android:textSize="@dimen/_20asp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="0.5dp"
                app:boxStrokeWidth="@dimen/_1adp"
                android:layout_marginVertical="@dimen/_4adp"
                app:placeholderTextColor="@color/white"
                app:errorTextColor="@color/red"
                app:boxStrokeErrorColor="@color/white"
                android:hint="E-mail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_12asp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:textColorHint="@color/white"
                app:boxStrokeWidth="@dimen/_1adp"
                android:layout_marginVertical="@dimen/_4adp"
                app:backgroundTint="@color/white"
                app:placeholderTextColor="@color/white"
                app:errorTextColor="@color/red"
                app:endIconMode="password_toggle"
                app:boxStrokeErrorColor="@color/white"
                android:hint="Password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_12asp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16adp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/white"
                android:paddingVertical="@dimen/_8adp"
                android:text="@string/log_in_str"
                android:textColor="@color/black"
                android:textAllCaps="true"
                android:textSize="@dimen/_12asp"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_str"
                android:textSize="@dimen/_12asp"
                android:layout_marginTop="@dimen/_8adp"
                android:layout_marginBottom="@dimen/_4adp"
                android:layout_gravity="end"
                android:paddingEnd="@dimen/_4adp"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_8adp"
        android:text="@string/log_in_buttom_str"
        android:textAlignment="center"
        android:textColor="@color/text_200"
        android:textSize="@dimen/_12asp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/profile_info_cardView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />


</androidx.constraintlayout.widget.ConstraintLayout>